--- a/.github/workflows/build_publish.yaml
+++ b/.github/workflows/build_publish.yaml
@@ -2,7 +2,7 @@ name: Render and Publish
 on:
   push:
     branches:
-      - main  # changes pushed to this branch will trigger a build.
+      - master
 
 jobs:
   build-deploy:
