--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
 
 format:
   html:
-    body-footer: `{r} format(Sys.Date(), "%Y")` Bruno Rodrigues
+    body-footer: 2025, content by Bruno Rodrigues, unless otherwise stated, every content of this blog is licensed under the WTFPL. Built with Quarto, Nix and hosted on GitHub Pages.
     theme: solar
     css: styles.css
     mainfont: "IBM Plex Serif"
