--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,7 @@ project:
 
 website:
   title: "Econometrics and Free Software"
-  site-url: https://www.brodrigues.co
+  site-url: https://b-rodrigues.github.io/blog/
 
 
 format:
