--- a/.github/workflows/build_publish.yaml
+++ b/.github/workflows/build_publish.yaml
@@ -26,5 +26,7 @@ jobs:
 
         - name: Publish to GitHub Pages (and render)
           uses: rstats-on-nix/quarto-nix-actions/publish@main
+          with:
+            target: gh-pages
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
