--- a/.github/workflows/build_publish.yaml
+++ b/.github/workflows/build_publish.yaml
@@ -11,22 +11,21 @@ jobs:
         contents: write
       steps:
         - name: Check out repository
-          uses: actions/checkout@v3
+          uses: actions/checkout@v4
 
         - name: Install Nix
           uses: DeterminateSystems/nix-installer-action@main
+    
+        - name: Setup cache
+          uses: DeterminateSystems/magic-nix-cache-action@main
 
         - name: Setup rstats-on-nix cache
           uses: cachix/cachix-action@v15
           with:
             name: rstats-on-nix
-
+  
         - name: Set up environment
           run: nix-build
 
         - name: Publish to GitHub Pages (and render)
-          uses: rstats-on-nix/quarto-nix-actions/publish@main
-          with:
-            target: gh-pages
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          run: nix-shell 'quarto publish gh-pages'
