--- a/.github/workflows/build_publish.yaml
+++ b/.github/workflows/build_publish.yaml
@@ -29,5 +29,9 @@ jobs:
 
         - name: Publish to GitHub Pages (and render)
           uses: rstats-on-nix/quarto-nix-actions/publish@main
+          to:
+            gh-pages
+          render:
+            true
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
