--- a/.github/workflows/build_publish.yaml
+++ b/.github/workflows/build_publish.yaml
@@ -29,7 +29,7 @@ jobs:
 
         - name: Publish to GitHub Pages (and render)
           uses: rstats-on-nix/quarto-nix-actions/publish@main
-          to: gh-pages
+          target: gh-pages
           render: true
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
