updated publish action

--- a/.github/workflows/build_publish.yaml
+++ b/.github/workflows/build_publish.yaml
@@ -31,5 +31,6 @@ jobs:
           uses: rstats-on-nix/quarto-nix-actions/publish@main
           with:
             render: true
+            target: gh-pages
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
