trigger render script

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,6 +2,7 @@ project:
   type: website
   resources:
     - "assets/*"
+  post-render: order_posts.R
 
 website:
   title: "Econometrics and Free Software"
