--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,12 +24,12 @@ format:
             </style>
             <table width="100%" height="100%" style="text-align: center;">
                 <td>
-                  <a href="index.qmd">Website</a> - 
+                  <a href="../index.html">Website</a> - 
                   <a href="https://www.youtube.com/@brodriguesco">Youtube</a> - 
-                  <a href="about.qmd">About</a> - 
-                  <a href="talks.qmd">Talks</a> -
-                  <a href="books.qmd">Books</a> - 
-                  <a href="packages.qmd">Packages</a> -
+                  <a href="../about.html">About</a> - 
+                  <a href="../talks.html">Talks</a> -
+                  <a href="../books.html">Books</a> - 
+                  <a href="../packages.html">Packages</a> -
                   <a href="index.xml">RSS</a>
                 </td>
             </table>
