--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,13 +24,13 @@ format:
             </style>
             <table width="100%" height="100%" style="text-align: center;">
                 <td>
-                  <a href="index.qmd">Website</a> - 
+                  <a href="https://b-rodrigues.github.io/blog/">Website</a> - 
                   <a href="https://www.youtube.com/@brodriguesco">Youtube</a> - 
-                  <a href="about.qmd">About</a> - 
-                  <a href="talks.qmd">Talks</a> -
-                  <a href="books.qmd">Books</a> - 
-                  <a href="packages.qmd">Packages</a> -
-                  <a href="index.xml">RSS</a>
+                  <a href="https://b-rodrigues.github.io/blog/about.html">About</a> - 
+                  <a href="https://b-rodrigues.github.io/blog/talks.html">Talks</a> -
+                  <a href="https://b-rodrigues.github.io/blog/books.html">Books</a> - 
+                  <a href="https://b-rodrigues.github.io/blog/packages.html">Packages</a> -
+                  <a href="https://b-rodrigues.github.io/blog/index.xml">RSS</a>
                 </td>
             </table>
     include-after-body: footer.html
